log in changed to owner

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/curating-feedback-instructiondataset.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/curating-feedback-instructiondataset.ipynb
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. If you are running Argilla using the Docker quickstart image or Hugging Face Spaces, you need to init the Argilla client with the `URL` and `API_KEY`:"
+    "3. If you are running Argilla using the Docker quickstart image or Hugging Face Spaces, you need to init the Argilla client with the `URL` and `API_KEY`. Later in the tutorial, we will need access to the list of users in Argilla, for which we have to log as owners, instead of the usual admin. Please remember to log as owner when opening Argilla in HF Spaces or locally."
    ]
   },
   {
@@ -92,7 +92,7 @@
     "# Replace api_key if you configured a custom API key\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\"\n",
     ")"
    ]
   },
