--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/train-reward-model-rlhf.ipynb
@@ -641,15 +641,20 @@
         "        for annotation in sample[\"choose-best\"]\n",
         "        if annotation[\"status\"] == \"submitted\"\n",
         "    ]\n",
-        "    # values => [1]\n",
-        "    winning_response = Counter(values).most_common(1)[0][0]\n",
-        "    if winning_response == 1:\n",
-        "        chosen = sample[\"response-1\"]\n",
-        "        rejected = sample[\"response-2\"]\n",
-        "    else:\n",
-        "        chosen = sample[\"response-2\"]\n",
-        "        rejected = sample[\"response-1\"]\n",
-        "    return chosen, rejected\n",
+        "    \n",
+        "    # We will only focus on the annotated records in the dataset\n",
+        "    if Counter(values).most_common(1) != []:\n",
+        "      \n",
+        "      # values => [1]\n",
+        "      winning_response = Counter(values).most_common(1)[0][0]\n",
+        "      print(Counter(values).most_common(1))\n",
+        "      if winning_response == 1:\n",
+        "          chosen = sample[\"response-1\"]\n",
+        "          rejected = sample[\"response-2\"]\n",
+        "      else:\n",
+        "          chosen = sample[\"response-2\"]\n",
+        "          rejected = sample[\"response-1\"]\n",
+        "      return chosen, rejected\n",
         "\n",
         "task = TrainingTask.for_reward_modeling(formatting_func=formatting_func)"
       ]
