Update links to Argilla in documentation

--- a/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow_feedback.ipynb
@@ -55,7 +55,7 @@
       "source": [
         "## Set Up Argilla\n",
         "\n",
-        "You can quickly deploy Argilla Server on [HF Spaces](https://huggingface.co/new-space?template=argilla/argilla-template-space).\n",
+        "You can quickly deploy Argilla Server on [HF Spaces](https://huggingface.co/new-space?template=Argilla).\n",
         "\n",
         "Alternatively, if you want to run Argilla locally on your own computer, the easiest way to get Argilla UI up and running is to deploy on Docker:\n",
         "\n",
