--- a/docs/_source/tutorials/notebooks/ner_fine_tune_bert_beginners.ipynb
+++ b/docs/_source/tutorials/notebooks/ner_fine_tune_bert_beginners.ipynb
@@ -63,7 +63,7 @@
         "1. [Deploy Argilla on Hugging Face Spaces](https://huggingface.co/docs/hub/spaces-sdks-docker-argilla): This is the fastest option and the recommended choice for connecting to external notebooks (e.g., Google Colab) if you have an account on Hugging Face.\n",
         "\n",
         "<p align=\"center\">\n",
-        "  <a href=\"https://huggingface.co/new-space?template=argilla/argilla-template-space\">\n",
+        "  <a href=\"https://huggingface.co/new-space?template=Argilla\">\n",
         "    <img src=\"https://huggingface.co/datasets/huggingface/badges/raw/main/deploy-to-spaces-lg.svg\" alt=\"deploy on spaces\">\n",
         "  </a>\n",
         "</p>\n",
