reference to private HF Spaces

--- a/docs/_source/getting_started/quickstart_workflow.ipynb
+++ b/docs/_source/getting_started/quickstart_workflow.ipynb
@@ -99,9 +99,11 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "#set your variable here\n",
+        "\n",
+        "# Set your variable here\n",
         "os.environ[\"ARGILLA_API_URL\"] = \"your_argilla_URL\"\n",
-        "os.environ[\"ARGILLA_API_KEY\"] = \"owner.apikey\""
+        "os.environ[\"ARGILLA_API_KEY\"] = \"owner.apikey\"\n",
+        "# os.environ['HF_TOKEN'] = \"your-hf-token\" # if you want to use your private HF Space"
       ]
     },
     {
@@ -119,7 +121,10 @@
       "source": [
         "import argilla as rg\n",
         "\n",
-        "rg.init(workspace=\"admin\")"
+        "rg.init(workspace=\"admin\")\n",
+        "\n",
+        "# If you want to use your private HF Space\n",
+        "# rg.init(workspace=\"admin\", extra_headers={\"Authorization\": f\"Bearer {os.environ['HF_TOKEN']}\"})"
       ]
     },
     {
