--- a/docs/_source/tutorials/notebooks/monitoring-textclassification-shaptransformersinterpret-explainability.ipynb
+++ b/docs/_source/tutorials/notebooks/monitoring-textclassification-shaptransformersinterpret-explainability.ipynb
@@ -113,6 +113,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you're running a private Hugging Face Space, you will also need to set the [`HF_TOKEN`](https://huggingface.co/settings/tokens) as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Set the HF_TOKEN environment variable\n",
+    "# import os\n",
+    "# os.environ['HF_TOKEN'] = \"your-hf-token\"\n",
+    "\n",
+    "# # Replace api_url with the url to your HF Spaces URL\n",
+    "# # Replace api_key if you configured a custom API key\n",
+    "# # Replace workspace with the name of your workspace\n",
+    "# rg.init(\n",
+    "#     api_url=\"https://hf-space.hf.space\", \n",
+    "#     api_key=\"owner.apikey\",\n",
+    "#    workspace=\"admin\",\n",
+    "#     extra_headers={\"Authorization\": f\"Bearer {os.environ['HF_TOKEN']}\"},\n",
+    "# )"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "5be64d5e",
