from outlines import text

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
@@ -81,9 +81,8 @@
         "\n",
         "from langchain import OpenAI, PromptTemplate, LLMChain\n",
         "from langchain.output_parsers import CommaSeparatedListOutputParser\n",
-        "from outlines import models\n",
-        "from outlines.text import generate\n",
-        "from outlines.text import text"
+        "from outlines import models, text\n",
+        "from outlines.text import generate"
       ]
     },
     {
