place to change the environment variable from tutorial

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
@@ -209,6 +209,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
         "openai_model = OpenAI(api_key=os.environ.get(\"OPENAI_API_KEY\"))"
       ]
     },
