docs: Outlines import failure in Langchain Tutorial (#4218)
Closes #4154

**Type of change**

(Please delete options that are not relevant. Remember to title the PR
according to the type of change)

- [ ] Bug fix (non-breaking change which fixes an issue)
- [ ] New feature (non-breaking change which adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] Refactor (change restructuring the codebase without changing
functionality)
- [ ] Improvement (change adding some improvement to an existing
functionality)
- [X] Documentation update

**Checklist**

- [X] I added relevant documentation
- [ ] follows the style guidelines of this project
- [ ] I did a self-review of my code
- [X] I made corresponding changes to the documentation
- [ ] My changes generate no new warnings
- [ ] I have added tests that prove my fix is effective or that my
feature works
- [ ] I filled out [the contributor form](https://tally.so/r/n9XrxK)
(see text above)
- [ ] I have added relevant notes to the CHANGELOG.md file (See
https://keepachangelog.com/)

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/labelling-feedback-langchain-syntethic.ipynb
@@ -81,9 +81,8 @@
         "\n",
         "from langchain import OpenAI, PromptTemplate, LLMChain\n",
         "from langchain.output_parsers import CommaSeparatedListOutputParser\n",
-        "from outlines import models\n",
-        "from outlines.text import generate\n",
-        "from outlines.text import text"
+        "from outlines import models, text\n",
+        "from outlines.text import generate"
       ]
     },
     {
@@ -103,7 +102,7 @@
         "# Replace api_key if you configured a custom API key\n",
         "rg.init(\n",
         "    api_url=\"http://localhost:6900\", \n",
-        "    api_key=\"argilla.apikey\"\n",
+        "    api_key=\"admin.apikey\"\n",
         ")"
       ]
     },
@@ -210,7 +209,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "openai_model = OpenAI(openai_api_key=os.environ.get(\"OPENAI_API_KEY\"))"
+        "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
+        "openai_model = OpenAI(api_key=os.environ.get(\"OPENAI_API_KEY\"))"
       ]
     },
     {
