--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/training-qa-transformers.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/training-qa-transformers.ipynb
@@ -4,16 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train a QA model with Argilla\n",
+    "# ❓ Train a QA model with transformers and Argilla\n",
     "\n",
     "At least once, you have probably found yourself in a situation where you need an answer for quite a specific question from Google. Chances are that Google gave you a response in bold letters (\"How much does the Eiffel Tower weigh? - 10,100 tons) or that Google only highlighted some text from the results (\"What was the original color of the Statue of Liberty?\"). Either way, Google used a specific algorithm that does the finding-the-answer job for you and saved you from reading a bunch of pages or using Ctrl+F. Although not confirming the reliability of the pages or the pieces of information found, it managed to come up with an exact answer to the question (it incorrectly highlights \"blue-green\" for the Statue of Liberty at the time of this post). This task -finding the exact answer in a piece of text for a given question- is called extractive question answering and it is one of the main pipelines of the many QA or LLM systems today. In this blogpost, we will see how we can use Argilla to create an end-to-end pipeline for extractive QA.\n",
     "\n",
     "Here are the steps we will follow:\n",
     "\n",
     "- Create a dataset for extractive QA\n",
-    "- Annotate the dataset with Argilla\n",
-    "\n",
-    "..."
+    "- Add suggestions to the dataset\n",
+    "- Push to Argilla and annotate\n",
+    "- Define the model\n",
+    "- Implement `ArgillaTrainer`\n",
+    "- Train the model\n",
+    "- Make predictions"
    ]
   },
   {
@@ -26,7 +29,7 @@
     "\n",
     "On the other hand, the task we have just seen above was an example of the extractive QA, where a model finds the exact span within a text that will be used as an answer to the given question. In this sense, this task formally consists of a tuple of (q,c,a) and the objective of training is to minimize the loss between *-log(Pstart)* and *-log(Pend)*, where *Pstart* and *Pend* are the probabilities of the start and end indices of the answer span.\n",
     "\n",
-    "Argilla offers all the necessary tools from the start to the end of such a pipeline. We will use `Argilla` to annotate our dataset and use `ArgillaTrainer` to train the QA model. `ArgillaTrainer` offers a smooth integration with `transformers`. ...  Let us first start by installing the required libraries and importing the necessary modules."
+    "Argilla offers all the necessary tools from the start to the end of such a pipeline. We will use `Argilla` to annotate our dataset and use `ArgillaTrainer` to train the QA model. `ArgillaTrainer` offers a smooth integration with `transformers`, which will allow you to implement your whole training process within the trainer itself. Let us first start by installing the required libraries and importing the necessary modules."
    ]
   },
   {
@@ -85,16 +88,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import argilla as rg\n",
-    "import re\n",
-    "from datasets import load_dataset, Dataset\n",
+    "from datasets import load_dataset\n",
     "from argilla.feedback import ArgillaTrainer, TrainingTask\n",
     "from transformers import pipeline, AutoTokenizer, AutoModelForQuestionAnswering\n",
-    "from transformers import TrainingArguments, Trainer, DefaultDataCollator\n",
     "import torch"
    ]
   },
@@ -128,11 +129,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_hf = load_dataset(\"squad\", split=\"train\").shard(num_shards=10000, index=55)"
+    "dataset_hf = load_dataset(\"squad\", split=\"train\")"
    ]
   },
   {
@@ -144,20 +145,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'id': '5733b1da4776f41900661069',\n",
+       "{'id': '5733be284776f41900661182',\n",
        " 'title': 'University_of_Notre_Dame',\n",
-       " 'context': \"In 1882, Albert Zahm (John Zahm's brother) built an early wind tunnel used to compare lift to drag of aeronautical models. Around 1899, Professor Jerome Green became the first American to send a wireless message. In 1931, Father Julius Nieuwland performed early work on basic reactions that was used to create neoprene. Study of nuclear physics at the university began with the building of a nuclear accelerator in 1936, and continues now partly through a partnership in the Joint Institute for Nuclear Astrophysics.\",\n",
-       " 'question': 'Which professor sent the first wireless message in the USA?',\n",
-       " 'answers': {'text': ['Professor Jerome Green'], 'answer_start': [136]}}"
+       " 'context': 'Architecturally, the school has a Catholic character. Atop the Main Building\\'s gold dome is a golden statue of the Virgin Mary. Immediately in front of the Main Building and facing it, is a copper statue of Christ with arms upraised with the legend \"Venite Ad Me Omnes\". Next to the Main Building is the Basilica of the Sacred Heart. Immediately behind the basilica is the Grotto, a Marian place of prayer and reflection. It is a replica of the grotto at Lourdes, France where the Virgin Mary reputedly appeared to Saint Bernadette Soubirous in 1858. At the end of the main drive (and in a direct line that connects through 3 statues and the Gold Dome), is a simple, modern stone statue of Mary.',\n",
+       " 'question': 'To whom did the Virgin Mary allegedly appear in 1858 in Lourdes France?',\n",
+       " 'answers': {'text': ['Saint Bernadette Soubirous'], 'answer_start': [515]}}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,12 +213,12 @@
     "\n",
     "### Add Suggestions\n",
     "\n",
-    "To help our annotators and make the annotation process faster, we can add suggestions to our dataset. Suggestions are model predictions for our data items that will be shown on Argilla UI during the annotation process. As it is optional, depending on your project, it will gain you a lot of time. You can use any model of your preference to generate model predictions to your dataset. We will be using `distilbert-base-uncased-distilled-squad` for demonstration purposes here. We can utilize the `pipeline` function from `transformers` to make things easier."
+    "To help our annotators and make the annotation process faster, we can add suggestions to our dataset. Suggestions are model predictions for our data items that will be shown on Argilla UI during the annotation process. As it is optional, depending on your project, it will gain you a lot of time. You can use any model of your preference to generate model predictions to your dataset. We will be using `deepset/electra-base-squad2` for demonstration purposes here. We can utilize the `pipeline` function from `transformers` to make things easier."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,11 +277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "remote_dataset = dataset.push_to_argilla(name=\"demonstration_data_squad_gpt2\", workspace=\"argilla\") #R"
+    "remote_dataset = dataset.push_to_argilla(name=\"demonstration_data_squad\", workspace=\"argilla\") "
    ]
   },
   {
@@ -289,110 +290,23 @@
    "source": [
     "## Train the Model\n",
     "\n",
-    "After our annoation work is done, we can download our annotated dataset. Note that the dataset downloaded by the `from_argilla` function is remote dataset object, meaning that any change you make is directly reflected on the remote dataset. "
+    "After our annotation work is done, we can download our annotated dataset. Note that the dataset downloaded by the `from_argilla` function is remote dataset object, meaning that any change you make is directly reflected on the remote dataset. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotated_dataset_from_argilla = rg.FeedbackDataset.from_argilla(\"demonstration_data_squad_gpt2\", workspace=\"argilla\")"
+    "annotated_dataset = rg.FeedbackDataset.from_argilla(\"demonstration_data_squad\", workspace=\"argilla\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can then set the format of our dataset as `datasets` to convert it into a datasets object."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "annotated_dataset = annotated_dataset_from_argilla.format_as(\"datasets\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The annotators gave their responses as text pieces and we need to convert them into the start and end indices of the answer span."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_span(answer, context):\n",
-    "    matches = re.finditer(answer, context)\n",
-    "    for match in matches:\n",
-    "        if type(match) == re.Match:\n",
-    "            start_index = match.start()\n",
-    "            end_index = match.end()\n",
-    "            return start_index, end_index\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By using the `find_span` function, we will create the `answer_start` and `answer_end` fields for our dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_answer_columns(dataset):\n",
-    "    answer_starts = []\n",
-    "    answer_ends = []\n",
-    "    for item in dataset:\n",
-    "        answer = item[\"answer\"][0][\"value\"]\n",
-    "        answer_start, answer_end = find_span(answer, item[\"context\"])\n",
-    "        answer_starts.append(answer_start)\n",
-    "        answer_ends.append(answer_end)\n",
-    "    dataset = dataset.add_column(\"answer_start\", answer_starts)\n",
-    "    dataset = dataset.add_column(\"answer_end\", answer_ends)\n",
-    "    return dataset\n",
-    "\n",
-    "annotated_dataset = create_answer_columns(annotated_dataset)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can now tokenize the `annotated_dataset` by mapping with our tokenizer function."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def tokenize_function(example):\n",
-    "    inputs = tokenizer(\n",
-    "        example[\"question\"],\n",
-    "        example[\"context\"],\n",
-    "        max_length=512,\n",
-    "        truncation=True,\n",
-    "        padding=\"max_length\",\n",
-    "    )\n",
-    "    \n",
-    "    inputs[\"start_positions\"] = annotated_dataset[\"answer_start\"]\n",
-    "    inputs[\"end_positions\"] = annotated_dataset[\"answer_end\"]\n",
-    "    return inputs\n"
+    "And let us define the model and the tokenizer we will be using. We will use `distilbert-base-uncased-distilled-squad` for demonstration purposes here and fine-tune it with the dataset that we have had annotated by our annotators."
    ]
   },
   {
@@ -401,24 +315,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenized_dataset = annotated_dataset.map(tokenize_function, batched=True).select_columns([\"input_ids\", \"attention_mask\", \"start_positions\", \"end_positions\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us split the dataset for training and validation sets."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#TO BE REPLACED BY ARGILLATRAINER\n",
-    "\n",
     "model_name = \"distilbert-base-uncased-distilled-squad\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "model = AutoModelForQuestionAnswering.from_pretrained(model_name)\n",
@@ -428,45 +324,97 @@
     "    print(f\"Using {torch.cuda.get_device_name(0)}\")\n",
     "else:\n",
     "    device = torch.device(\"cpu\")\n",
-    "    print(\"No GPU available, using CPU instead.\")\n",
+    "    print(\"No GPU available, using CPU instead.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implement the ArgillaTrainer\n",
     "\n",
-    "splited_dataset = tokenized_dataset.train_test_split(test_size=0.8)\n",
+    "Now that we have our dataset ready, we can start training our model. For this, we will use the `ArgillaTrainer` class from Argilla. `ArgillaTrainer` is a wrapper around various frameworks and offers a smooth integration between them and Argilla. It allows you to train your model on Argilla with a few lines of code. You can have more information on `ArgillaTrainer` from [here](../../../practical_guides/fine_tune.md##the-argillatrainer).\n",
     "\n",
-    "train_dataset = splited_dataset['train']\n",
-    "val_dataset = splited_dataset['test']\n",
-    "train_dataset.set_format(\"torch\",device=device)\n",
-    "val_dataset.set_format(\"torch\",device=device)\n",
+    "We firstly need to define the `task` that will be used by the `ArgillaTrainer`. The `TrainingTask` class offers various tasks for different NLP tasks and we will use the `for_question_answering` method to create our task. We also create a `formatting_func` for our task, which will process our dataset according to what model requires."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def formatting_func(sample):\n",
+    "    question = sample[\"question\"]\n",
+    "    context = sample[\"context\"]\n",
+    "    for answer in sample[\"answer\"]:\n",
+    "        if not all([question, context, answer[\"value\"]]):\n",
+    "            continue\n",
+    "        yield question, context, answer[\"value\"]\n",
     "\n",
-    "data_collator = DefaultDataCollator()\n",
-    "\n",
-    "training_args = TrainingArguments(\n",
-    "    output_dir='./results',\n",
-    "    overwrite_output_dir=True,\n",
-    "    save_strategy=\"epoch\",\n",
-    "    evaluation_strategy = \"epoch\",\n",
-    "    learning_rate=0.000005,\n",
-    "    per_device_train_batch_size=128,\n",
-    "    per_device_eval_batch_size=128,\n",
-    "    num_train_epochs=5,\n",
-    "    weight_decay=0.001,\n",
-    "    push_to_hub=False,\n",
-    "    logging_strategy=\"epoch\",\n",
-    "    logging_dir='./logs',\n",
-    "    logging_steps=5,\n",
-    "    load_best_model_at_end=True,\n",
-    "    greater_is_better=True,\n",
-    "    dataloader_pin_memory=False,\n",
-    ")\n",
-    "\n",
-    "trainer = Trainer(\n",
+    "task = TrainingTask.for_question_answering(formatting_func=formatting_func)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the task ready, we can now create the `ArgillaTrainer` instance. Note that we need to define our framework inside the trainer and we will be using `transformers` here. In case of not having a model fed to the trainer, the trainer will use a default model for the task. We pass the model that define above to the trainer. Also, we tell the model that the training size will be 0.7."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer = ArgillaTrainer(\n",
+    "    dataset=annotated_dataset,\n",
+    "    task=task,\n",
     "    model=model,\n",
-    "    args=training_args,\n",
-    "    train_dataset=train_dataset,\n",
-    "    eval_dataset=val_dataset,\n",
-    "    data_collator=data_collator,\n",
-    ")\n",
-    "\n",
-    "trainer.train()"
+    "    framework=\"transformers\",\n",
+    "    train_size=0.7,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You have the opportunity to change the trainer configurations after the initialization with the `update_config` method. Let us further configure our traning process."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.update_config(\n",
+    "    learning_rate = 4e-2,\n",
+    "    weight_decay = 0.01,\n",
+    "    max_grad_norm = 1,\n",
+    "    num_train_epochs = 3,\n",
+    "    logging_strategy = \"steps\",\n",
+    "    save_strategy = \"steps\",\n",
+    "    save_steps = 100,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now train the model with the `train` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.train(\"./my_qa_model\")"
    ]
   },
   {
@@ -480,13 +428,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "qa_pipeline = pipeline(\n",
     "    \"question-answering\",\n",
-    "    model=model,\n",
+    "    model=\"my_qa_model\",\n",
     "    tokenizer=tokenizer,\n",
     "    device=device\n",
     ")"
@@ -501,25 +449,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'score': 0.6772550344467163,\n",
+       "{'score': 0.6827161908149719,\n",
        " 'start': 27,\n",
        " 'end': 41,\n",
        " 'answer': 'natural beauty'}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "qa_pipeline(question=\"For what is Venezuela famous?\", context=\"Venezuela is known for its natural beauty.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this tutorial, we have seen how we can use Argilla to create an end-to-end pipeline for extractive QA. We have firstly created a dataset for extractive QA and added suggestions to it. Then, we have pushed the dataset to Argilla and annotated it. After that, we have defined the model and implemented the `ArgillaTrainer` to train the model. Finally, we have made predictions with the trained model. For more tutorials on other uses of Argilla and ArgillaTrainer, please refer to our [tutorials](../../../tutorials_and_integrations/tutorials/tutorials.md) page."
    ]
   }
  ],
