--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
@@ -443,7 +443,7 @@
     "        fields={\"query\": question, \"retrieved_document_1\": context[0], \"retrieved_document_2\": context[1], \"retrieved_document_3\": context[2]},\n",
     "        metadata={\"source\": \"flan-t5-large\"}\n",
     "    )\n",
-    "    for question, context in tqdm(zip(questions[:3], contexts[:3]))\n",
+    "    for question, context in tqdm(zip(questions, contexts))\n",
     "]\n",
     "\n",
     "# Add records to the dataset\n",
