--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/training-qa-transformers.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/training-qa-transformers.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ❓ Train a QA model with transformers and Argilla\n",
+    "# ❓ Train a QnA model with transformers and Argilla\n",
     "\n",
-    "At least once, you have probably found yourself in a situation where you need an answer to quite a specific question from Google. Chances are that Google gave you a response in bold letters (\"How much does the Eiffel Tower weigh? - 10,100 tons) or that Google only highlighted some text from the results (\"What was the original color of the Statue of Liberty?\"). Either way, Google used a specific algorithm that does the finding-the-answer job for you and saved you from reading a bunch of pages or using Ctrl+F. Although not confirming the reliability of the pages or the pieces of information found, it managed to come up with an exact answer to the question (it incorrectly highlights \"blue-green\" for the Statue of Liberty at the time of this post). This task -finding the exact answer in a piece of text for a given question- is called extractive question answering and it is one of the main pipelines of the many QA or LLM systems today. In this blogpost, we will see how we can use Argilla to create an end-to-end pipeline for extractive QA.\n",
+    "At least once, you have probably found yourself in a situation where you need an answer to quite a specific question from Google. Chances are that Google gave you a response in bold letters (\"How much does the Eiffel Tower weigh? - 10,100 tons) or that Google only highlighted some text from the results (\"What was the original color of the Statue of Liberty?\"). Either way, Google used a specific algorithm that does the finding-the-answer job for you and saved you from reading a bunch of pages or using Ctrl+F. Although not confirming the reliability of the pages or the pieces of information found, it managed to come up with an exact answer to the question (it incorrectly highlights \"blue-green\" for the Statue of Liberty at the time of this post). This task -finding the exact answer in a piece of text for a given question- is called extractive question answering and it is one of the main pipelines of the many QnA or LLM systems today. In this blogpost, we will see how we can use Argilla to create an end-to-end pipeline for extractive QnA.\n",
     "\n",
     "Here are the steps we will follow:\n",
     "\n",
-    "- Create a dataset for extractive QA\n",
+    "- Create a dataset for extractive QnA\n",
     "- Add suggestions to the dataset\n",
     "- Push to Argilla and annotate\n",
     "- Define the model\n",
@@ -25,11 +25,11 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "**Question answering (QA)** tasks are mainly divided into two: extractive QA and generative QA. Generative QA (or abstractive QA) is the task where the QA system generates human-like, natural language answers to a question. For this, a generative QA system uses a retriever-generator architecture instead of a retriever-reader one, which is employed by an extractive QA. As it requires a deeper understanding of the text and natural language generation, generative models are yet to catch the extractive ones in terms of performance as of today. However, as it offers a more sophisticated pipeline and output, it will have much more to offer in the future.\n",
+    "**Question answering (QnA)** tasks are mainly divided into two: extractive QnA and generative QnA. Generative QnA (or abstractive QnA) is the task where the QnA system generates human-like, natural language answers to a question. For this, a generative QnA system uses a retriever-generator architecture instead of a retriever-reader one, which is employed by an extractive QnA. As it requires a deeper understanding of the text and natural language generation, generative models are yet to catch the extractive ones in terms of performance as of today. However, as it offers a more sophisticated pipeline and output, it will have much more to offer in the future.\n",
     "\n",
-    "On the other hand, the task we have just seen above was an example of the extractive QA, where a model finds the exact span within a text that will be used as an answer to the given question. In this sense, this task formally consists of a tuple of (q,c,a) and the objective of training is to minimize the loss between *-log(Pstart)* and *-log(Pend)*, where *Pstart* and *Pend* are the probabilities of the start and end indices of the answer span.\n",
+    "On the other hand, the task we have just seen above was an example of the extractive QnA, where a model finds the exact span within a text that will be used as an answer to the given question. In this sense, this task formally consists of a tuple of (q,c,a) and the objective of training is to minimize the loss between *-log(Pstart)* and *-log(Pend)*, where *Pstart* and *Pend* are the probabilities of the start and end indices of the answer span.\n",
     "\n",
-    "Argilla offers all the necessary tools from the start to the end of such a pipeline. We will use `Argilla` to annotate our dataset and use `ArgillaTrainer` to train the QA model. `ArgillaTrainer` offers a smooth integration with `transformers`, which will allow you to implement your whole training process within the trainer itself. Let us first start by installing the required libraries and importing the necessary modules."
+    "Argilla offers all the necessary tools from the start to the end of such a pipeline. We will use `Argilla` to annotate our dataset and use `ArgillaTrainer` to train the QnA model. `ArgillaTrainer` offers a smooth integration with `transformers`, which will allow you to implement your whole training process within the trainer itself. Let us first start by installing the required libraries and importing the necessary modules."
    ]
   },
   {
@@ -156,7 +156,7 @@
    "source": [
     "## Create the Dataset\n",
     "\n",
-    "As the first step in our QA pipeline, we will need a dataset annotated by our annotators. For this, we will need to create a dataset where there is a question and context to search for the answer within. Our annotators will construct the answers by giving answers to the questions from the context. For this tutorial, we will use the [squad](https://huggingface.co/datasets/squad) dataset, which is a popular dataset for extractive QA. We will firstly ignore the answers and load the question-context pairs from `squad` to Argilla to showcase the annotation process. We will use the `datasets` library to download the dataset. Let us create the dataset and see how it is structured."
+    "As the first step in our QnA pipeline, we will need a dataset annotated by our annotators. For this, we will need to create a dataset where there is a question and context to search for the answer within. Our annotators will construct the answers by giving answers to the questions from the context. For this tutorial, we will use the [squad](https://huggingface.co/datasets/squad) dataset, which is a popular dataset for extractive QnA. We will firstly ignore the answers and load the question-context pairs from `squad` to Argilla to showcase the annotation process. We will use the `datasets` library to download the dataset. Let us create the dataset and see how it is structured."
    ]
   },
   {
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our dataset consists of context-question-answer triplets along with id and title for each data item. In your own dataset, you too may consider working with ids for each data item as it will help with data organization especially in pre- and post-training.  A total of 87599 items are included in this dataset, which is quite a good number for training a QA model.\n",
+    "Our dataset consists of context-question-answer triplets along with id and title for each data item. In your own dataset, you too may consider working with ids for each data item as it will help with data organization especially in pre- and post-training.  A total of 87599 items are included in this dataset, which is quite a good number for training a QnA model.\n",
     "\n",
     "And let us have a look at one of the data items we have before starting the annotation process."
    ]
@@ -222,6 +222,7 @@
    "source": [
     "`squad` is a dataset of question-context-answer triplets pulled from Wikipedia articles. As seen in the `title` field above, each data item comes from a specific Wikipedia article. The `context` field contains the text of the article, `question` contains the question to be answered, and `answers` contains the answer span within the context, which are already annotated by humans. The `answer_start` is the starting index of the answer within the context given. We will ignore the `answers` field for now and only use the `context` and `question` fields.\n",
     "\n",
+    "\n",
     "### Create FeedbackDataset\n",
     "\n",
     "Let us create our `FeedbackDataset` and add the data items from `squad`. To create a `FeedbackDataset`, we will use the task templates from Argilla, which makes the process much easier for any NLP task. You can have more info about the task templates from [here](../../../practical_guides/create_dataset.md#task-templates)."
@@ -240,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This method has just created the basic QA task template for us with `context` and `question` fields along with the `answer` question which will be used by the annotators to construct the answer.\n",
+    "This method has just created the basic QnA task template for us with `context` and `question` fields along with the `answer` question which will be used by the annotators to construct the answer.\n",
     "\n",
     "Now that we have our dataset ready, we can add the data items from `squad` to our dataset as `records` by adding suggestions for each one as well.\n",
     "\n",
@@ -382,6 +383,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-info\">\n",
+    "\n",
+    "Note\n",
+    "\n",
+    "The main motivation behind Extractive QnA is to find the exact answer piece within the given text. This is why the answers must be exactly included in the contexts given. So, it is highly advisable to check if the answers include typos or not. Our model will pass over the items whose answers are not included in the context.\n",
+    "\n",
+    "</div>\n",
+    "\n",
     "Now, let us define the model and the tokenizer we will be using. We will use `distilbert-base-uncased-distilled-squad` for demonstration purposes here and fine-tune it with the dataset that we have had annotated by our annotators."
    ]
   },
@@ -493,7 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.train(\"./my_qa_model\")"
+    "trainer.train(\"./my_qna_model\")"
    ]
   },
   {
@@ -511,9 +520,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qa_pipeline = pipeline(\n",
+    "qna_pipeline = pipeline(\n",
     "    \"question-answering\",\n",
-    "    model=\"my_qa_model\",\n",
+    "    model=\"my_qna_model\",\n",
     "    tokenizer=tokenizer,\n",
     "    device=device\n",
     ")"
@@ -546,14 +555,14 @@
     }
    ],
    "source": [
-    "qa_pipeline(question=\"For what is Venezuela famous?\", context=\"Venezuela is known for its natural beauty.\")"
+    "qna_pipeline(question=\"For what is Venezuela famous?\", context=\"Venezuela is known for its natural beauty.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial, we have seen how we can use Argilla to create an end-to-end pipeline for extractive QA. We have first created a dataset for extractive QA and added suggestions to it. Then, we have pushed the dataset to Argilla and annotated it. After that, we have defined the model and implemented the `ArgillaTrainer` to train the model. Finally, we have made predictions with the trained model. For more tutorials on other uses of Argilla and ArgillaTrainer, please refer to our [tutorials](../../../tutorials_and_integrations/tutorials/tutorials.md) page."
+    "In this tutorial, we have seen how we can use Argilla to create an end-to-end pipeline for extractive QnA. We have first created a dataset for extractive QnA and added suggestions to it. Then, we have pushed the dataset to Argilla and annotated it. After that, we have defined the model and implemented the `ArgillaTrainer` to train the model. Finally, we have made predictions with the trained model. For more tutorials on other uses of Argilla and ArgillaTrainer, please refer to our [tutorials](../../../tutorials_and_integrations/tutorials/tutorials.md) page."
    ]
   }
  ],
