fixing the HF_TOKEN issue

--- a/docs/_source/tutorials/notebooks/labelling-tokenclassification-deletelabels.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-tokenclassification-deletelabels.ipynb
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you're running a private Hugging Face Space, you will also need to set the [`HF_TOKEN`](https://huggingface.co/settings/tokens) as follows:"
+    "If you're running a private Hugging Face Space, you will also need to set the [HF_TOKEN](https://huggingface.co/settings/tokens) as follows:"
    ]
   },
   {
