hf reference fixes

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you're running a private Hugging Face Space, you will also need to set the [`HF_TOKEN`](https://huggingface.co/settings/tokens) as follows:"
+    "If you're running a private Hugging Face Space, you will also need to set the [HF_TOKEN](https://huggingface.co/settings/tokens) as follows:"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's preprocess our document using the predefined [`TextIndexingPipeline`](https://docs.haystack.deepset.ai/docs/ready_made_pipelines#textindexingpipeline). This pipeline allow us to initialize the `DocumentStore` (the database for the retriever), the `PreProcessor` (to clean and split the document into smaller units), and the `TextConverter` (to convert the txt file into a Document object)."
+    "Now, let's preprocess our document using the predefined [TextIndexingPipeline](https://docs.haystack.deepset.ai/docs/ready_made_pipelines#textindexingpipeline). This pipeline allow us to initialize the `DocumentStore` (the database for the retriever), the `PreProcessor` (to clean and split the document into smaller units), and the `TextConverter` (to convert the txt file into a Document object)."
    ]
   },
   {
@@ -253,7 +253,7 @@
    "source": [
     "After having our file prepared, we initialize the retriever and prompt node. In our case, we will use a dense retriever, `EmbeddingRetriever`, which computes the embeddings of our document and those of the query. The most common architecture and the one that we will use in this blog post is `sentence-transformers`, you can find more information about it [here](https://www.davidsbatista.net/blog/2023/10/22/SentenceTransformers/).\n",
     "\n",
-    "Regarding the [`PromptNode`](https://docs.haystack.deepset.ai/docs/prompt_node), we will use the [`flan-t5-large`](https://huggingface.co/google/flan-t5-large) model, an open-source LLM of Google available in HuggingFaces, although [more](https://docs.haystack.deepset.ai/docs/prompt_node#models) can be used. And it will use the custom [prompt template](https://docs.haystack.deepset.ai/docs/prompt_node#prompttemplates) `rag_prompt` that we have defined.\n",
+    "Regarding the [PromptNode](https://docs.haystack.deepset.ai/docs/prompt_node), we will use the [flan-t5-large](https://huggingface.co/google/flan-t5-large) model, an open-source LLM of Google available in HuggingFaces, although [more](https://docs.haystack.deepset.ai/docs/prompt_node#models) can be used. And it will use the custom [prompt template](https://docs.haystack.deepset.ai/docs/prompt_node#prompttemplates) `rag_prompt` that we have defined.\n",
     "\n",
     "\n",
     ">```python\n",
@@ -365,7 +365,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we got our raw data, so we can create the Argilla datasets using the [`FeedbackDatasetTemplates`](/practical_guides/create_dataset.html#task-templates). In this case, we will use the `FeedbackDataset.for_retrieval_augmented_generation` template for the retrieval storing the query and the contexts and the `FeedbackDataset.for_sentence_similarity` template for the reranking storing the contexts."
+    "Finally, we got our raw data, so we can create the Argilla datasets using the [FeedbackDatasetTemplates](/practical_guides/create_dataset.html#task-templates). In this case, we will use the `FeedbackDataset.for_retrieval_augmented_generation` template for the retrieval storing the query and the contexts and the `FeedbackDataset.for_sentence_similarity` template for the reranking storing the contexts."
    ]
   },
   {
@@ -588,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To improve the retrieval model, we need to [fine-tune a sentence similarity model](../../practical_guides/fine_tune.html#sentence-similarity), which compares the query embeddings and the context embeddings of the documents retrieved in the case of the bi-encoder and rank the contexts in the case of the cross-encoder. In this tutorial, we will fine-tune both models using the [`ArgillaTrainer`](../../practical_guides/fine_tune.html#argillatrainer) with the datasets we have created."
+    "To improve the retrieval model, we need to [fine-tune a sentence similarity model](../../practical_guides/fine_tune.html#sentence-similarity), which compares the query embeddings and the context embeddings of the documents retrieved in the case of the bi-encoder and rank the contexts in the case of the cross-encoder. In this tutorial, we will fine-tune both models using the [ArgillaTrainer](../../practical_guides/fine_tune.html#argillatrainer) with the datasets we have created."
    ]
   },
   {
