--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/training-qa-transformers.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/training-qa-transformers.ipynb
@@ -154,6 +154,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Enable Telemetry\n",
+    "\n",
+    "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../../reference/telemetry.md) page.\n",
+    "\n",
+    "```python\n",
+    "from argilla.utils.telemetry import tutorial_running\n",
+    "\n",
+    "tutorial_running()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Create the Dataset\n",
     "\n",
     "As the first step in our QnA pipeline, we will need a dataset annotated by our annotators. For this, we will need to create a dataset where there is a question and context to search for the answer within. Our annotators will construct the answers by giving answers to the questions from the context. For this tutorial, we will use the [squad](https://huggingface.co/datasets/squad) dataset, which is a popular dataset for extractive QnA. We will firstly ignore the answers and load the question-context pairs from `squad` to Argilla to showcase the annotation process. We will use the `datasets` library to download the dataset. Let us create the dataset and see how it is structured."
