--- a/docs/_source/tutorials/notebooks/labelling-spacy-llm.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-spacy-llm.ipynb
@@ -118,7 +118,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `spacy-llm` pipeline\n",
+    "### Enable Telemetry\n",
+    "\n",
+    "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../reference/telemetry.md) page.\n",
+    "\n",
+    "```python\n",
+    "from argilla.utils.telemetry import tutorial_running\n",
+    "\n",
+    "tutorial_running()\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `spacy-llm` pipeline\n",
     "\n",
     "To be able to use GPT3.5 and other models from OpenAI with spacy-llm, we'll need an API key from [openai.com](https://openai.com) and set it as an environment variable."
    ]
