--- a/docs/_source/tutorials/notebooks/monitoring-textclassification-setfit-explainability.ipynb
+++ b/docs/_source/tutorials/notebooks/monitoring-textclassification-setfit-explainability.ipynb
@@ -241,7 +241,7 @@
         "id": "TEyjYZHAIV9h"
       },
       "source": [
-        "### Make Zero Shot Text Classification predictions using transformers\n",
+        "## Make Zero Shot Text Classification predictions using transformers\n",
         "\n",
         "On HugginFace we choose the model `cross-encoder/nli-distilroberta-base` that is trained to perform zero-shot classification.\n",
         "We create a pipeline with this model and then perform prediction.\n",
