docs: Add telemetry reference to the tutorials to track usage (#4262)
<!-- Thanks for your contribution! As part of our Community Growers
initiative 🌱, we're donating Justdiggit bunds in your name to reforest
sub-Saharan Africa. To claim your Community Growers certificate, please
contact David Berenstein in our Slack community or fill in this form
https://tally.so/r/n9XrxK once your PR has been merged. -->

# Description

This PR adds an "Enable Telemetry" section to the tutorials for the new
`tutorial_running` method.

Closes #4234 

**Type of change**

(Remember to title the PR according to the type of change)

- [ ] Documentation update

**How Has This Been Tested**

(Please describe the tests that you ran to verify your changes.)

- [ ] `sphinx-autobuild` (read [Developer
Documentation](https://docs.argilla.io/en/latest/community/developer_docs.html#building-the-documentation)
for more details)

**Checklist**

- [ ] I added relevant documentation
- [ ] I followed the style guidelines of this project
- [ ] I did a self-review of my code
- [ ] I made corresponding changes to the documentation
- [ ] My changes generate no new warnings
- [ ] I filled out [the contributor form](https://tally.so/r/n9XrxK)
(see text above)
- [ ] I have added relevant notes to the `CHANGELOG.md` file (See
https://keepachangelog.com/)

--- a/docs/_source/tutorials/notebooks/monitoring-textclassification-setfit-explainability.ipynb
+++ b/docs/_source/tutorials/notebooks/monitoring-textclassification-setfit-explainability.ipynb
@@ -222,11 +222,26 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Enable Telemetry\n",
+        "\n",
+        "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../reference/telemetry.md) page.\n",
+        "\n",
+        "```python\n",
+        "from argilla.utils.telemetry import tutorial_running\n",
+        "\n",
+        "tutorial_running()\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "TEyjYZHAIV9h"
       },
       "source": [
-        "### Make Zero Shot Text Classification predictions using transformers\n",
+        "## Make Zero Shot Text Classification predictions using transformers\n",
         "\n",
         "On HugginFace we choose the model `cross-encoder/nli-distilroberta-base` that is trained to perform zero-shot classification.\n",
         "We create a pipeline with this model and then perform prediction.\n",
