feat: Suggestion visualization

--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -36,6 +36,8 @@
   "metadata": "Metadata",
   "responses": "Responses",
   "suggestions": "Suggestions",
+  "suggested-rank": "✨ Suggested rank",
+  "suggestion": "✨ Suggestion",
   "reset-all": "Reset all",
   "reset": "Reset",
   "with": "with",
