feat: add telemetry for the tutorial

--- a/docs/_source/practical_guides/examples/text_classification/text-classification-create-dataset-0001.ipynb
+++ b/docs/_source/practical_guides/examples/text_classification/text-classification-create-dataset-0001.ipynb
@@ -209,6 +209,31 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enable Telemetry"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../reference/telemetry.md) page."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from argilla.utils.telemetry import tutorial_running\n",
+    "\n",
+    "tutorial_running()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f50177aa-4c94-4b8f-8293-a3710e3cb0ca",
    "metadata": {
     "papermill": {
@@ -449,7 +474,7 @@
     "        )\n",
     "    )\n",
     "\n",
-    "    ## EXPLAIN THE external_id "
+    "# We can add an external_id to each record to identify it later."
    ]
   },
   {
@@ -506,25 +531,6 @@
    "source": [
     "df_dataset = ds.to_pandas()\n",
     "df_dataset.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85e62740",
-   "metadata": {
-    "papermill": {
-     "duration": null,
-     "end_time": null,
-     "exception": null,
-     "start_time": null,
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df_dataset"
    ]
   },
   {
