refactor: set python3 as the default kernel for running the notebooks

--- a/docs/_source/practical_guides/examples/text_classification/text-classification-create-dataset-0001.ipynb
+++ b/docs/_source/practical_guides/examples/text_classification/text-classification-create-dataset-0001.ipynb
@@ -209,6 +209,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fa470f0b",
    "metadata": {},
    "source": [
     "### Enable Telemetry"
@@ -216,6 +217,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "95e3ca39",
    "metadata": {},
    "source": [
     "We gain valuable insights from how you interact with our tutorials. To improve ourselves in offering you the most suitable content, using the following lines of code will help us understand that this tutorial is serving you effectively. Though this is entirely anonymous, you can choose to skip this step if you prefer. For more info, please check out the [Telemetry](../../reference/telemetry.md) page."
@@ -224,6 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7671fbb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,9 +895,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": ".venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
