show yellow background for suggestion tab

--- a/frontend/translation/en.json
+++ b/frontend/translation/en.json
@@ -37,7 +37,7 @@
   "responses": "Responses",
   "suggestions": "Suggestions",
   "suggested-rank": "✨ Suggested rank",
-  "suggestion": "Suggestion",
+  "suggestion": "✨ Suggestion",
   "reset-all": "Reset all",
   "reset": "Reset",
   "with": "with",
