--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
@@ -914,7 +914,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And as we can see, the results are much better than before and with the ranked provided us the best context! 👏 "
+    "And as we can see, the results are much better than before and the ranker provided us the best context! 👏 "
    ]
   },
   {
