--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/fine-tuning-sentencesimilarity-rag.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "* 📝 Set up a QA pipeline with RAG using [Haystack](https://haystack.deepset.ai/overview/intro)\n",
     "* 🗃️ Get the answers and contexts to create our own datasets\n",
-    "* 📩 Create the Argilla datasets and push them allowing the visualization and annotation on the `Argilla UI`\n",
+    "* 📩 Create the Argilla datasets and push them to the `Argilla UI`\n",
     "* 💫 Fine-tune the `bi-encoder` and `cross-encoder`\n",
     "* 🌌 Use our fine-tuned models to improve the original RAG model \n"
    ]
@@ -207,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generating Responses with Haystack\n",
+    "### Generating Responses\n",
     "\n",
     "[Haystack](https://haystack.deepset.ai/) stands as an open-source framework, offering the means to construct end-to-end pipelines for various NLP tasks. It is model-agnostic and can be used for tasks such as question answering, document search, and summarization. In this tutorial, we will use Haystack to generate responses for our datasets."
    ]
@@ -788,7 +788,7 @@
    "source": [
     "To do so, we will use the same questions and documents for RAG as previously. If you have completed all the preceding steps, then you can continue.\n",
     "\n",
-    "> Remember, it's unnecessary to reinitialize the document_store if the same documents are being used. However, ensure that the embeddings_dim align with those from our fine-tuned models. If there's a mismatch, reinitialize the document_store  with the correct values (document_store.delete_documents()) and run the TextIndexingPipeline."
+    "> Remember, it's unnecessary to reinitialize the document_store if the same documents are being used. However, ensure that the embeddings_dim align with those from our fine-tuned models. If there's a mismatch, reinitialize the document_store  with the correct values and run the TextIndexingPipeline."
    ]
   },
   {
