chore: added file changes for end2end tests chore: changed notebook to trigger workflow

--- a/docs/_source/practical_guides/examples/text_classification/text-classification-create-dataset-0001.ipynb
+++ b/docs/_source/practical_guides/examples/text_classification/text-classification-create-dataset-0001.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "## 1. Push to `Argilla` and 🤗`hub`\n",
     "\n",
-    "This tutorial is the first of a series in which we will get to know the `FeedbackDataset` for `text-classification`. We will start by creating a basic dataset using as example [ag_news](https://huggingface.co/datasets/ag_news) and push it to `Argilla` and the 🤗`hub`."
+    "This tutorial is the first of a series in which we will get to know the `FeedbackDataset` for `text-classification`. We will start by creating a basic dataset using as example [ag_news](https://huggingface.co/datasets/ag_news) and push it to `Argilla` and the Hugging Face`hub`."
    ]
   },
   {
