--- a/docs/_source/practical_guides/examples/text_classification/text-classification-create-dataset-0001.ipynb
+++ b/docs/_source/practical_guides/examples/text_classification/text-classification-create-dataset-0001.ipynb
@@ -140,7 +140,10 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import argilla as rg\n",
+    "from argilla._constants import DEFAULT_API_KEY\n",
     "from datasets import load_dataset"
    ]
   },
@@ -171,8 +174,8 @@
    "outputs": [],
    "source": [
     "# Argilla credentials\n",
-    "api_url = \"https://<YOUR-HF-SPACE>.hf.space\"\n",
-    "api_key = \"admin.apikey\"\n",
+    "api_url = \"http://localhost:6900\" # \"https://<YOUR-HF-SPACE>.hf.space\"\n",
+    "api_key = DEFAULT_API_KEY # admin.apikey\n",
     "# Huggingface credentials\n",
     "hf_token = \"hf_...\""
    ]
