docs: updated end2end tutorials

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/configure-users-and-workspaces.ipynb
@@ -14,11 +14,13 @@
     "tags": []
    },
    "source": [
-    "# Creating a `FeedbackDataset` for `text-classification`.\n",
+    "# Creating a `FeedbackDataset`\n",
     "\n",
-    "## 1. Push to `Argilla` and 🤗`hub`\n",
+    "This tutorial is the first of a series in which we will get to know the `FeedbackDataset`. Before starting this tutorial, you need to do the tutorial on [configuring users and workspaces](.co). In this step we will show how to configure a `FeedbackDataset` and add `FeedbackRecords` to it.\n",
     "\n",
-    "This tutorial is the first of a series in which we will get to know the `FeedbackDataset` for `text-classification`. We will start by creating a basic dataset using as example [ag_news](https://huggingface.co/datasets/ag_news) and push it to `Argilla` and the Hugging Face`hub`."
+    "![workflow](../../../../_static/tutorials/end2end/base/workflow_create_dataset.png)\n",
+    "\n",
+    "We will start by creating a basic dataset using the [ag_news](https://huggingface.co/datasets/ag_news) dataset as an example and push it to `Argilla` and the Hugging Face `hub`."
    ]
   },
   {
@@ -37,15 +39,14 @@
    "source": [
     "## Table of Contents\n",
     "\n",
-    "1. [Create a `FeedbackDataset`](#create-feedbackdataset)\n",
-    "\n",
-    "    1.1 [Create a `FeedbackDataset` from a huggingface `dataset`](#create-feedbackdataset-datasets)\n",
-    "\n",
-    "    1.2 [Create a `FeedbackDataset` from a `pandas.DataFrame`](#create-feedbackdataset-pandas)\n",
-    "\n",
-    "2. [Push our `FeedbackDataset` to `Argilla`](#push-to-argilla)\n",
-    "3. [Push our `FeedbackDataset` to the 🤗`hub`](#push-to-hf-hub)\n",
-    "4. [Conclusions](#conclusions)\n"
+    "1. [Configure a FeedbackDataset](#create-feedbackdataset)\n",
+    "2. [Add records](#add-records)\n",
+    "   1. [From a Hugging Face dataset](#create-feedbackdataset-datasets)\n",
+    "   2. [From a pandas.DataFrame](#create-feedbackdataset-pandas)\n",
+    "3. [Save a FeedbackDataset](#save-the-dataset)\n",
+    "   1. [Push our FeedbackDataset to Argilla](#push-to-argilla)\n",
+    "   2. [Push our FeedbackDataset to the Hugging Face hub](#push-to-hf-hub)\n",
+    "4. [Conclusions](#conclusions)"
    ]
   },
   {
@@ -140,8 +141,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
     "import argilla as rg\n",
     "from argilla._constants import DEFAULT_API_KEY\n",
     "from datasets import load_dataset"
@@ -416,7 +415,9 @@
     "tags": []
    },
    "source": [
-    "### Create a `FeedbackDataset` from a huggingface `dataset` <a class=\"anchor\" id=\"create-feedbackdataset-datasets\"></a>"
+    "## Add records <a class=\"anchor\" id=\"add-records\"></a>\n",
+    "\n",
+    "### From a Hugging Face `dataset` <a class=\"anchor\" id=\"create-feedbackdataset-datasets\"></a>"
    ]
   },
   {
@@ -497,7 +498,7 @@
     "tags": []
    },
    "source": [
-    "### Create a `FeedbackDataset` from a `pandas.DataFrame` <a class=\"anchor\" id=\"create-feedbackdataset-pandas\"></a>"
+    "### From a `pandas.DataFrame` <a class=\"anchor\" id=\"create-feedbackdataset-pandas\"></a>"
    ]
   },
   {
@@ -634,7 +635,9 @@
     "tags": []
    },
    "source": [
-    "## Push our `FeedbackDataset` to `Argilla` <a class=\"anchor\" id=\"push-to-argilla\"></a>"
+    "## Save and load the dataset <a class=\"anchor\" id=\"save-dataset\"></a>\n",
+    "\n",
+    "### From `Argilla` <a class=\"anchor\" id=\"push-to-argilla\"></a>"
    ]
   },
   {
@@ -687,7 +690,7 @@
     "tags": []
    },
    "source": [
-    "![feedback-dataset](../images/feedback-dataset-text-classification-1.png)"
+    "![feedback-dataset](../../../../_static/tutorials/end2end/text-classification/feedback-dataset-text-classification-1.png)"
    ]
   },
   {
@@ -705,23 +708,6 @@
    },
    "source": [
     "Where we can see the *Text from the article* we wanted, and the different labels to choose from."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "70a9c1e6-b89c-48e1-9b9f-dc865535ccc6",
-   "metadata": {
-    "papermill": {
-     "duration": null,
-     "end_time": null,
-     "exception": null,
-     "start_time": null,
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "#### Download our dataset from `Argilla`"
    ]
   },
   {
@@ -775,7 +761,7 @@
     "tags": []
    },
    "source": [
-    "## Push our `FeedbackDataset` to the 🤗`hub` <a class=\"anchor\" id=\"push-to-hf-hub\"></a>\n",
+    "### From Hugging Face hub <a class=\"anchor\" id=\"push-to-hf-hub\"></a>\n",
     "\n",
     "If we wanted to share our dataset with the world, we could use the Huggingface hub for it."
    ]
@@ -854,6 +840,22 @@
    "outputs": [],
    "source": [
     "remote_dataset.push_to_huggingface(\"argilla/end2end_textclassification\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now download the dataset from Hugging Face just to check it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "local_dataset = rg.FeedbackDataset.from_huggingface(\"argilla/end2end_textclassification\")"
    ]
   },
   {
