chore: updated starting reference

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# Creating a `FeedbackDataset`\n",
     "\n",
-    "This tutorial is the first of a series in which we will get to know the `FeedbackDataset`. Before starting this tutorial, you need to do the tutorial on [configuring users and workspaces](/configure-users-and-workspaces.html). In this step, we will show how to configure a `FeedbackDataset` and add `FeedbackRecords` to it. If you need additional context, consult [our docs](../../../../practical_guides/create_dataset.md).\n",
+    "This tutorial is part of a series in which we will get to know the `FeedbackDataset`. Before starting this tutorial, you need to do the tutorial on [configuring users and workspaces](/configure-users-and-workspaces.html). In this step, we will show how to configure a `FeedbackDataset` and add `FeedbackRecords` to it. If you need additional context, consult [our docs on creating a dataset](../../../../practical_guides/create_dataset.md).\n",
     "\n",
     "![workflow](../../../../_static/tutorials/end2end/base/workflow_create_dataset.png)\n",
     "\n",
@@ -690,7 +690,7 @@
     "tags": []
    },
    "source": [
-    "![feedback-dataset](../../../../../_static/tutorials/end2end/text-classification/feedback-dataset-text-classification-1.png)"
+    "![feedback-dataset](../../../../_static/tutorials/end2end/text-classification/feedback-dataset-text-classification-1.png)"
    ]
   },
   {
