docs: updated phrasing docs: added general workflow image

--- a/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/feedback/end2end_examples/create-dataset.ipynb
@@ -251,7 +251,7 @@
     "tags": []
    },
    "source": [
-    "## Create a `FeedbackDataset` <a class=\"anchor\" id=\"create-feedbackdataset\"></a>"
+    "## Configure a `FeedbackDataset` <a class=\"anchor\" id=\"create-feedbackdataset\"></a>"
    ]
   },
   {
